added missing pieces changed some colors added beating game mechanic